Websockets qui annoncent un nouveau joueur sur la table

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 <h1>
     CCCC
 </h1>
-<script src="/socket.io/socket.io.js"></script>
+<script src="socket.io/socket.io.js"></script>
 
     <script>
         var socket = io() ; // J'initialise une connexion au serveur websocket
